# beagle

./: .gitignore  .gitmodules  CMakeLists.txt
src/beagle/: beagle_global_definitions.h  engine.cpp  engine.h  entity.cpp  entity.h  entity_manager.cpp  entity_manager.h  game.h  math.h
src/beagle/assets/: asset.h  asset_manager.cpp  asset_manager.h  material_pool.cpp  material_pool.h  mesh.cpp  mesh.h  mesh_pool.cpp  mesh_pool.h  shader_pool.cpp  shader_pool.h  texture_pool.cpp  texture_pool.h
src/beagle/components/: transform.h
src/beagle/ecs/: entity.h  job_executor.cpp  job_executor.h  job_graph.cpp  job_graph.h  job_manager.cpp  job_manager.h  job_system.cpp  job_system.h  pbr_job_graph.cpp  pbr_job_graph.h  system_manager.cpp  system_manager.h  thread_pool.cpp  thread_pool.h
src/beagle/ecs/components/: camera.h  light.h  mesh_renderer.h  renderer.h  skybox.h  transform.h
src/beagle/ecs/events/: camera_events.h
src/beagle/ecs/system/: transform_system.cpp
src/beagle/ecs/systems/: camera_system.cpp  camera_system.h  mesh_system.cpp  mesh_system.h  render_system.cpp  render_system.h  skybox_system.cpp  skybox_system.h  transform_system.cpp  transform_system.h
src/beagle/renderer/: environment.cpp  environment.h
src/beagle/renderer/uniforms/: camera_uniform.h
src/beagle/utils/: graph.h
template/: CMakeLists.txt
template/assets/shaders/: color.frag  color.frag.spv  color.vert  color.vert.spv  color_shader.json  fullscreen.frag  fullscreen.frag.spv  light.glsl  mesh.frag  mesh.frag.spv  mesh.vert  mesh.vert.spv  mesh_color.frag  mesh_color.frag.spv  mesh_phong.frag  mesh_phong.frag.spv  phong.glsl
template/assets/shaders/compute/: cubemap_irradiance.comp  cubemap_irradiance.comp.spv  cubemap_prefilter.comp  cubemap_prefilter.comp.spv  integrate_brdf.comp  integrate_brdf.comp.spv  unwrap_skybox.comp  unwrap_skybox.comp.spv
template/assets/shaders/compute/utils/: utils.glsl
template/assets/shaders/pbr/: pbr.glsl  pbr_material.glsl  pbr_mesh.frag  pbr_mesh.frag.spv
template/assets/shaders/phong/: phong.glsl  phong_material.glsl  phong_mesh.frag  phong_mesh.frag.spv
template/assets/shaders/skybox/: skybox.frag  skybox.frag.spv  skybox.vert  skybox.vert.spv
template/proj.android/: settings.gradle
template/proj.android/app/: CMakeLists.txt  build.gradle
template/proj.android/app/src/main/: AndroidManifest.xml
template/proj.android/app/src/main/cpp/: main.cpp
template/proj.android/gradle/wrapper/: gradle-wrapper.properties
template/proj.win32/: CMakeLists.txt  main.cpp
template/src/template/: template_app.cpp  template_game.cpp  template_game.h
template/src/template/ecs/components/: camera_controller.h
template/src/template/ecs/systems/: camera_control_system.cpp  camera_control_system.h
